--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
   ],
   "dependencies": {
     "chroma-js": "^2.1.0",
-    "expo-linear-gradient": "^8.0.0"
+    "react-native-linear-gradient": "^2.6.2"
   },
   "peerDependencies": {
     "prop-types": "^15.7.2"
@@ -46,8 +46,6 @@
     "eslint-plugin-jsx-a11y": "^6.2.1",
     "eslint-plugin-react": "^7.12.4",
     "eslint-plugin-react-native": "^3.6.0",
-    "expo": "~36.0.0",
-    "expo-keep-awake": "^8.0.0",
     "jest": "^24.0.0",
     "jest-enzyme": "^7.0.2",
     "jest-expo": "^36.0.1",
