chore: Update deprecated view prop styles

--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "babel-eslint": "^10.0.1",
     "babel-jest": "^24.0.0",
     "babel-preset-expo": "~8.0.0",
+    "deprecated-react-native-prop-types": "^2.3.0",
     "enzyme": "^3.10.0",
     "enzyme-adapter-react-16": "^1.14.0",
     "enzyme-to-json": "^3.3.5",
